force-app/main/default/objects/Record_Date_Deletion_Configuration__mdt/Record_Date_Deletion_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This metadata handles which objects are selectable in the LWC &apos;Delete Data From Date&apos; (RecordDateDeletion) and in which order it needs to be deleted.</description>
    <label>Record Date Deletion Configuration</label>
    <pluralLabel>Record Date Deletion Configurations</pluralLabel>
</CustomObject>