force-app/main/default/objects/Record_Date_Deletion_Configuration__mdt/fields/Deletion_Order__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Order__c</fullName>
    <description>The deletion order is needed to delete the objects in correct order, so that children records are deleted before the parent record.</description>
    <inlineHelpText>The deletion order is needed to delete the objects in correct order, so that children records are deleted before the parent record.</inlineHelpText>
    <label>Deletion Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>