force-app/main/default/objects/Record_Date_Deletion_Configuration__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>This is the name of the object as shown in the LWC.</description>
    <inlineHelpText>This is the name of the object as shown in the LWC. For example &apos;Klant&apos;, &apos;Overeenkomst&apos; or &apos;Zaak&apos;</inlineHelpText>
    <label>Display Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>