force-app/main/default/objects/Record_Date_Deletion_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Possibility to deactivate this object temporary.</description>
    <inlineHelpText>Possibility to deactivate this object temporary.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>