force-app/main/default/objects/Record_Date_Deletion_Configuration__mdt/fields/Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Name_Field__c</fullName>
    <description>This fiel is used to show in the error message if the record couldn&apos;t be deleted. Use the API name of the field.</description>
    <inlineHelpText>This fiel is used to show in the error message if the record couldn&apos;t be deleted. Use the API name of the field.</inlineHelpText>
    <label>Name Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>