force-app/main/default/objects/Record_Date_Deletion_Configuration__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Stores the api name of the object which is availble for deletion.</description>
    <inlineHelpText>Stores the api name of the object which is availble for deletion.</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>