force-app/main/default/objects/Record_Date_Deletion_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Object_API_Name__c</columns>
    <columns>Deletion_Order__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Display_Label__c</columns>
    <columns>Name_Field__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>